--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=LaundryLuxe
+server.port=8089
+
+spring.datasource.url=jdbc:mysql://localhost:3306/laundry_locks
+spring.datasource.username=root
+spring.datasource.password=Goldenberry@0912
+Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
